--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -72,19 +72,19 @@ jobs:
   
   deploy-services:
     runs-on: niffler-stage-runner
-    needs: prepare
+    needs: collect-versions
     steps:
       - name: Push required props to GITHUB_ENV
         run: |
           echo "PROFILE=staging" >> $GITHUB_ENV
           echo "PREFIX=${{ vars.DOCKER_HUB_ACC }}" >> $GITHUB_ENV
           echo "VAULT_TOKEN=${{ secrets.VAULT_TOKEN }}" >> $GITHUB_ENV
-          echo "AUTH_VER=${{ needs.prepare.outputs.auth-ver }}" >> $GITHUB_ENV
-          echo "CURRENCY_VER=${{ needs.prepare.outputs.currency-ver }}" >> $GITHUB_ENV
-          echo "GATEWAY_VER=${{ needs.prepare.outputs.gateway-ver }}" >> $GITHUB_ENV
-          echo "SPEND_VER=${{ needs.prepare.outputs.spend-ver }}" >> $GITHUB_ENV
-          echo "USERDATA_VER=${{ needs.prepare.outputs.userdata-ver }}" >> $GITHUB_ENV
-          echo "FRONT_VER=${{ needs.prepare.outputs.front-ver }}" >> $GITHUB_ENV
+          echo "AUTH_VER=${{ needs.collect-versions.outputs.auth-ver }}" >> $GITHUB_ENV
+          echo "CURRENCY_VER=${{ needs.collect-versions.outputs.currency-ver }}" >> $GITHUB_ENV
+          echo "GATEWAY_VER=${{ needs.collect-versions.outputs.gateway-ver }}" >> $GITHUB_ENV
+          echo "SPEND_VER=${{ needs.collect-versions.outputs.spend-ver }}" >> $GITHUB_ENV
+          echo "USERDATA_VER=${{ needs.collect-versions.outputs.userdata-ver }}" >> $GITHUB_ENV
+          echo "FRONT_VER=${{ needs.collect-versions.outputs.front-ver }}" >> $GITHUB_ENV
           echo "FRONT_IMAGE=niffler-frontend" >> $GITHUB_ENV
 
       - name: Summary info
