--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -6,17 +6,17 @@ on:
         type: string
     outputs:
       auth-ver:
-        value: ${{ jobs.prepare.outputs.auth }}
+        value: ${{ jobs.collect-versions.outputs.auth }}
       currency-ver:
-        value: ${{ jobs.prepare.outputs.currency }}
+        value: ${{ jobs.collect-versions.outputs.currency }}
       gateway-ver:
-        value: ${{ jobs.prepare.outputs.gateway }}
+        value: ${{ jobs.collect-versions.outputs.gateway }}
       spend-ver:
-        value: ${{ jobs.prepare.outputs.spend }}
+        value: ${{ jobs.collect-versions.outputs.spend }}
       userdata-ver:
-        value: ${{ jobs.prepare.outputs.userdata }}
+        value: ${{ jobs.collect-versions.outputs.userdata }}
       front-ver:
-        value: ${{ jobs.prepare.outputs.front }}
+        value: ${{ jobs.collect-versions.outputs.front }}
 
 jobs:
   collect-versions:
