fix small problem

--- a/niffler-e-2-e-tests/Dockerfile
+++ b/niffler-e-2-e-tests/Dockerfile
@@ -1,6 +1,7 @@
 ARG DOCKER
-FROM $DOCKER
-ENV JAVA_OPTS=""
+ARG ALLURE_DOCKER_API
+FROM ${DOCKER}
+ENV ALLURE_DOCKER_API=${ALLURE_DOCKER_API}
 
 WORKDIR /niffler
 COPY ./gradle ./gradle
