--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,7 +32,7 @@ jobs:
           : # build backends with profile `docker`, only for testing
           bash ./gradlew -Pskipjaxb jibDockerBuild -x :niffler-e-2-e-tests:test
           : # build container with tests `qaguru/niffler-e-2-e-tests:latest`     
-          docker build --build-arg DOCKER=eclipse-temurin:21-jdk -t qaguru/niffler-e-2-e-tests:latest -f ./niffler-e-2-e-tests/Dockerfile .
+          docker build --build-arg DOCKER=eclipse-temurin:21-jdk --build-arg ALLURE_DOCKER_API=${{ env.ALLURE_DOCKER_API }} -t qaguru/niffler-e-2-e-tests:latest -f ./niffler-e-2-e-tests/Dockerfile .
           : # build frontend container `qaguru/niffler-frontend-docker:latest`
           cd ./niffler-frontend/ || exit 1
           bash docker-build.sh docker
@@ -44,6 +44,8 @@ jobs:
           docker ps -a
           docker wait niffler-e-2-e
           exit_code=$(docker inspect -f '{{.State.ExitCode}}' niffler-e-2-e)
+          echo "### Test logs"
+          docker logs niffler-e-2-e
           docker-compose -f docker-compose.test.yml down
           docker system prune -a -f
           if [ "$exit_code" -eq "0" ]; then
