--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -28,7 +28,6 @@ services:
       - "2181"
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
-      - ZOOKEEPER_TICK_TIME=2000
     networks:
       - test-network
     dns_search: .
@@ -165,6 +164,7 @@ services:
     image: ${PREFIX}/niffler-e-2-e-tests:latest
     environment:
       - ALLURE_DOCKER_API=${ALLURE_DOCKER_API}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
     depends_on:
       frontend.niffler.dc:
         condition: service_started
