--- a/niffler-auth/build.gradle
+++ b/niffler-auth/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '1.2.1'
+version = '1.2.2-TEST'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
