--- a/niffler-userdata/build.gradle
+++ b/niffler-userdata/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '1.3.0'
+version = '1.3.1'
 
 configurations {
     jaxb
@@ -29,6 +29,7 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
     implementation "wsdl4j:wsdl4j:${project.ext.wsdl4jVersion}"
+    implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     compileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
     runtimeOnly "org.postgresql:postgresql:${project.ext.postgresDriverVersion}"
