--- a/.github/workflows/niffler-frontend-gql-prod.yaml
+++ b/.github/workflows/niffler-frontend-gql-prod.yaml
@@ -37,4 +37,4 @@ jobs:
         run: |
           pwd
           echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
-          bash ./docker-build.sh prod push
+          bash ./docker-build.sh prod push || exit 1
