--- a/.github/workflows/niffler-frontend-prod.yaml
+++ b/.github/workflows/niffler-frontend-prod.yaml
@@ -37,7 +37,7 @@ jobs:
         run: |
           pwd
           echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
-          bash ./docker-build.sh prod push
+          bash ./docker-build.sh prod push || exit 1
       - name: deploy
         run: |
           docker-compose -f docker-compose.ci.yml pull frontend.niffler.dc
