--- a/.github/workflows/niffler-spend-prod.yaml
+++ b/.github/workflows/niffler-spend-prod.yaml
@@ -37,7 +37,7 @@ jobs:
         run: |
           pwd
           echo "### niffler-spend version will be used: ${{ env.SPEND_VER }}"
-          bash ./gradlew :niffler-spend:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
+          bash ./gradlew :niffler-spend:jib -Pskipjaxb -x :niffler-e-2-e-tests:test || exit 1
           docker-compose -f docker-compose.ci.yml pull spend.niffler.dc
           docker-compose -f docker-compose.ci.yml stop spend.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps spend.niffler.dc
           docker system prune -a -f
