--- a/niffler-gateway/build.gradle
+++ b/niffler-gateway/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '1.3.0'
+version = '1.3.1'
 
 configurations {
     jaxb
@@ -102,6 +102,10 @@ jib {
         tags = ['latest', "${project.version}"]
     }
 }
+
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
+tasks.compileJava.dependsOn genJaxb
 
 tasks.named('bootJar') {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
