--- a/niffler-spend/build.gradle
+++ b/niffler-spend/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '1.3.0'
+version = '1.3.1'
 
 dependencies {
     implementation project(':niffler-grpc-common')
@@ -16,11 +16,13 @@ dependencies {
     implementation "net.devh:grpc-client-spring-boot-starter:${project.ext.springGrpcVersion}"
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
+    implementation "org.flywaydb:flyway-database-postgresql:${project.ext.flywayVersion}"
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     compileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
     runtimeOnly "org.postgresql:postgresql:${project.ext.postgresDriverVersion}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2:2.2.224'
     testImplementation 'org.mockito:mockito-core:5.5.0'
     testImplementation("org.mockito:mockito-junit-jupiter:5.5.0") {
         exclude group: "org.junit.jupiter"
@@ -48,6 +50,9 @@ jib {
         tags = ['latest', "${project.version}"]
     }
 }
+
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
 
 tasks.register('printVersion') {
     doLast {
