--- a/niffler-userdata/build.gradle
+++ b/niffler-userdata/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '1.3.1'
+version = '1.3.2'
 
 configurations {
     jaxb
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.springframework.kafka:spring-kafka:${project.ext.springKafkaVersion}"
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
+    implementation "org.flywaydb:flyway-database-postgresql:${project.ext.flywayVersion}"
     implementation "wsdl4j:wsdl4j:${project.ext.wsdl4jVersion}"
     implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
@@ -36,6 +37,7 @@ dependencies {
     jaxb("org.glassfish.jaxb:jaxb-xjc:${project.ext.glassfishJaxbVersion}")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2:2.2.224'
 }
 
 jib {
@@ -79,7 +81,9 @@ tasks.register('genJaxb') {
     }
 }
 
-compileJava.dependsOn genJaxb
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
+tasks.compileJava.dependsOn genJaxb
 
 tasks.named('bootJar') {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -94,4 +98,3 @@ tasks.register('printVersion') {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
