--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -32,7 +32,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '1.3.1'
+version = '1.3.2'
 
 allure {
     version.set("${allureVersion}")
@@ -48,8 +48,8 @@ configurations {
 }
 
 tasks.register('genJaxb') {
-    ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
-    ext.classesDir = "${buildDir}/classes/jaxb"
+    ext.sourcesDir = layout.buildDirectory.dir("generated-sources/jaxb").get()
+    ext.classesDir = layout.buildDirectory.dir("classes/jaxb").get()
     ext.schema = "${userdataWsdlUrl}"
 
     outputs.dir classesDir
@@ -66,7 +66,7 @@ tasks.register('genJaxb') {
                 produces(dir: sourcesDir, includes: "**/*.java")
             }
 
-            javac(destdir: classesDir, source: 17, target: 17, debug: true,
+            javac(destdir: classesDir, source: 21, target: 21, debug: true,
                     debugLevel: "lines,vars,source",
                     classpath: configurations.jaxb.asPath) {
                 src(path: sourcesDir)
@@ -156,7 +156,7 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
