--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -36,7 +36,9 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          echo "### niffler-auth version will be used: ${{ env.AUTH_VER }}"
+          echo "### niffler-auth version will be used: ${{ env.AUTH_VER }} ###"
+          echo "### java version ###"
+          java -version
           bash ./gradlew :niffler-auth:jib -Pskipjaxb -x :niffler-e-2-e-tests:test || exit 1
           docker-compose -f docker-compose.ci.yml pull auth.niffler.dc
           docker-compose -f docker-compose.ci.yml stop auth.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps auth.niffler.dc
