--- a/.github/workflows/niffler-currency-prod.yaml
+++ b/.github/workflows/niffler-currency-prod.yaml
@@ -36,7 +36,9 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          echo "### niffler-currency version will be used: ${{ env.CURRENCY_VER }}"
+          echo "### niffler-currency version will be used: ${{ env.CURRENCY_VER }} ###"
+          echo "### java version ###"
+          java -version
           bash ./gradlew :niffler-currency:jib -Pskipjaxb -x :niffler-e-2-e-tests:test || exit 1
           docker-compose -f docker-compose.ci.yml pull currency.niffler.dc
           docker-compose -f docker-compose.ci.yml stop currency.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps currency.niffler.dc
