--- a/.github/workflows/niffler-frontend-gql-prod.yaml
+++ b/.github/workflows/niffler-frontend-gql-prod.yaml
@@ -36,5 +36,5 @@ jobs:
         working-directory: ./niffler-frontend-gql
         run: |
           pwd
-          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
+          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }} ###"
           bash ./docker-build.sh prod push || exit 1
