--- a/.github/workflows/niffler-frontend-prod.yaml
+++ b/.github/workflows/niffler-frontend-prod.yaml
@@ -36,7 +36,7 @@ jobs:
         working-directory: ./niffler-frontend
         run: |
           pwd
-          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
+          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }} ###"
           bash ./docker-build.sh prod push || exit 1
       - name: deploy
         run: |
