--- a/.github/workflows/niffler-userdata-prod.yaml
+++ b/.github/workflows/niffler-userdata-prod.yaml
@@ -36,7 +36,9 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          echo "### niffler-userdata version will be used: ${{ env.USERDATA_VER }}"
+          echo "### niffler-userdata version will be used: ${{ env.USERDATA_VER }} ###"
+          echo "### java version ###"
+          java -version
           bash ./gradlew :niffler-userdata:jib -Pskipjaxb -x :niffler-e-2-e-tests:test || exit 1
           docker-compose -f docker-compose.ci.yml pull userdata.niffler.dc
           docker-compose -f docker-compose.ci.yml stop userdata.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps userdata.niffler.dc
