--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ subprojects {
         springVaultVersion = '4.1.1'
         springGrpcVersion = '3.0.0.RELEASE'
         springGraphqlDateTimeVersion = '6.0.0'
+        openApiVersion = '2.5.0'
         glassfishJaxbVersion = '4.0.5'
         wsdl4jVersion = '1.6.3'
         thumbnailatorVersion = '0.4.20'
