--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,30 +23,25 @@ jobs:
       - name: Build and run e2e-tests
         env:
           PROFILE: docker
-          ARCH: linux/amd64
           PREFIX: qaguru
-          FRONT_IMAGE: qaguru/niffler-frontend-docker:latest
+          ARCH: amd64
+          FRONT: niffler-frontend
+          FRONT_VERSION: test
           ALLURE_DOCKER_API: ${{ secrets.ALLURE_DOCKER_API }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           : # build backends with profile `docker`, only for testing
           bash ./gradlew -Pskipjaxb jibDockerBuild -x :niffler-e-2-e-tests:test || exit 1
-          : # build container with tests `qaguru/niffler-e-2-e-tests:latest`     
-          docker build --build-arg DOCKER=eclipse-temurin:21-jdk --build-arg ALLURE_DOCKER_API=${{ env.ALLURE_DOCKER_API }} --build-arg GITHUB_TOKEN=${{ env.GITHUB_TOKEN }} -t qaguru/niffler-e-2-e-tests:latest -f ./niffler-e-2-e-tests/Dockerfile . || exit 1
-          : # build frontend container `qaguru/niffler-frontend-docker:latest`
-          cd ./niffler-frontend/ || exit 1
-          bash docker-build.sh docker || exit 1
-          cd ../ || exit 1
           : # pull browser (see browsers.json)        
           docker pull selenoid/vnc_chrome:125.0
           : # run e2e tests
-          docker-compose -f docker-compose.test.yml up -d
+          docker compose -f docker-compose.test.yml up -d
           docker ps -a
           docker wait niffler-e-2-e
           exit_code=$(docker inspect -f '{{.State.ExitCode}}' niffler-e-2-e)
           echo "### Test logs ###"
           docker logs niffler-e-2-e
-          docker-compose -f docker-compose.test.yml down
+          docker compose -f docker-compose.test.yml down
           docker system prune -a -f
           if [ "$exit_code" -eq "0" ]; then
             echo "Tests passed successfully!"
@@ -138,8 +133,8 @@ jobs:
         run: |
           pwd
           bash ./gradlew :niffler-auth:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
-          docker-compose -f docker-compose.ci.yml pull auth.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop auth.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps auth.niffler.dc
+          docker compose -f docker-compose.ci.yml pull auth.niffler.dc
+          docker compose -f docker-compose.ci.yml stop auth.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps auth.niffler.dc
           docker system prune -a -f
           echo "Deploy auth to staging done!"
 
@@ -149,8 +144,8 @@ jobs:
         run: |
           pwd
           bash ./gradlew :niffler-currency:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
-          docker-compose -f docker-compose.ci.yml pull currency.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop currency.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps currency.niffler.dc
+          docker compose -f docker-compose.ci.yml pull currency.niffler.dc
+          docker compose -f docker-compose.ci.yml stop currency.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps currency.niffler.dc
           docker system prune -a -f
           echo "Deploy currency to staging done!"
 
@@ -160,8 +155,8 @@ jobs:
         run: |
           pwd
           bash ./gradlew :niffler-gateway:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
-          docker-compose -f docker-compose.ci.yml pull gateway.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop gateway.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps gateway.niffler.dc
+          docker compose -f docker-compose.ci.yml pull gateway.niffler.dc
+          docker compose -f docker-compose.ci.yml stop gateway.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps gateway.niffler.dc
           docker system prune -a -f
           echo "Deploy gateway to staging done!"
 
@@ -171,8 +166,8 @@ jobs:
         run: |
           pwd
           bash ./gradlew :niffler-spend:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
-          docker-compose -f docker-compose.ci.yml pull spend.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop spend.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps spend.niffler.dc
+          docker compose -f docker-compose.ci.yml pull spend.niffler.dc
+          docker compose -f docker-compose.ci.yml stop spend.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps spend.niffler.dc
           docker system prune -a -f
           echo "Deploy spend to staging done!"
 
@@ -182,8 +177,8 @@ jobs:
         run: |
           pwd
           bash ./gradlew :niffler-userdata:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
-          docker-compose -f docker-compose.ci.yml pull userdata.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop userdata.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps userdata.niffler.dc
+          docker compose -f docker-compose.ci.yml pull userdata.niffler.dc
+          docker compose -f docker-compose.ci.yml stop userdata.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps userdata.niffler.dc
           docker system prune -a -f
           echo "Deploy userdata to staging done!"
 
@@ -194,8 +189,8 @@ jobs:
           pwd     
           bash ./docker-build.sh staging push
           cd ../ || exit 1
-          docker-compose -f docker-compose.ci.yml pull frontend.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop frontend.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps frontend.niffler.dc
+          docker compose -f docker-compose.ci.yml pull frontend.niffler.dc
+          docker compose -f docker-compose.ci.yml stop frontend.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps frontend.niffler.dc
           docker system prune -a -f
           echo "Deploy frontend to staging done!"
 
