--- a/.github/workflows/niffler-gateway-prod.yaml
+++ b/.github/workflows/niffler-gateway-prod.yaml
@@ -40,7 +40,7 @@ jobs:
           echo "### java version ###"
           java -version
           bash ./gradlew :niffler-gateway:jib -Pskipjaxb -x :niffler-e-2-e-tests:test || exit 1
-          docker-compose -f docker-compose.ci.yml pull gateway.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop gateway.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps gateway.niffler.dc
+          docker compose -f docker-compose.ci.yml pull gateway.niffler.dc
+          docker compose -f docker-compose.ci.yml stop gateway.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps gateway.niffler.dc
           docker system prune -a -f
           echo "Done!"
