--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,7 +14,7 @@ services:
       timeout: 3s
       retries: 5
     expose:
-      - "5432"
+      - 5432
     networks:
       - test-network
 
@@ -22,7 +22,7 @@ services:
     container_name: zookeeper
     image: confluentinc/cp-zookeeper:7.3.2
     expose:
-      - "2181"
+      - 2181
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
     networks:
@@ -32,7 +32,7 @@ services:
     container_name: kafka
     image: confluentinc/cp-kafka:7.3.2
     expose:
-      - "9092"
+      - 9092
     depends_on:
       zookeeper:
         condition: service_started
@@ -50,12 +50,12 @@ services:
     container_name: auth.niffler.dc
     image: ${PREFIX}/niffler-auth-docker:latest
     expose:
-      - "9000"
+      - 9000
     healthcheck:
       test: "wget --spider http://localhost:9000/actuator/health || exit 1"
       interval: 5s
       timeout: 5s
-      retries: 10
+      retries: 5
     depends_on:
       niffler-all-db:
         condition: service_healthy
@@ -68,8 +68,8 @@ services:
     container_name: currency.niffler.dc
     image: ${PREFIX}/niffler-currency-docker:latest
     expose:
-      - "8091"
-      - "8092"
+      - 8091
+      - 8092
     depends_on:
       niffler-all-db:
         condition: service_healthy
@@ -80,7 +80,7 @@ services:
     container_name: gateway.niffler.dc
     image: ${PREFIX}/niffler-gateway-docker:latest
     expose:
-      - "8090"
+      - 8090
     depends_on:
       auth.niffler.dc:
         condition: service_healthy
@@ -91,7 +91,7 @@ services:
     container_name: spend.niffler.dc
     image: ${PREFIX}/niffler-spend-docker:latest
     expose:
-      - "8093"
+      - 8093
     depends_on:
       niffler-all-db:
         condition: service_healthy
@@ -102,7 +102,7 @@ services:
     container_name: userdata.niffler.dc
     image: ${PREFIX}/niffler-userdata-docker:latest
     expose:
-      - "8089"
+      - 8089
     depends_on:
       auth.niffler.dc:
         condition: service_healthy
@@ -111,9 +111,17 @@ services:
 
   frontend.niffler.dc:
     container_name: frontend.niffler.dc
-    image: "${FRONT_IMAGE}"
+    build:
+      context: ./${FRONT}
+      dockerfile: ./Dockerfile
+      tags:
+        - ${PREFIX}/${FRONT}-docker:latest
+        - ${PREFIX}/${FRONT}-docker:${FRONT_VERSION}
+      args:
+        NPM_COMMAND: build:docker
+    image: ${PREFIX}/${FRONT}-docker:latest
     expose:
-      - "80"
+      - 80
     depends_on:
       gateway.niffler.dc:
         condition: service_started
@@ -123,14 +131,14 @@ services:
   selenoid:
     container_name: selenoid
     image: aerokube/selenoid:1.11.2
-    platform: "${ARCH}"
+    platform: linux/${ARCH}
     volumes:
       - ./selenoid:/etc/selenoid
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
     command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "3", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_test-network" ]
     ports:
-      - "4444:4444"
+      - 4444:4444
     networks:
       - test-network
 
@@ -141,7 +149,7 @@ services:
       - selenoid
     restart: unless-stopped
     ports:
-      - "9091:8080"
+      - 9091:8080
     command: [ "--selenoid-uri", "http://selenoid:4444" ]
     networks:
       - test-network
@@ -151,6 +159,8 @@ services:
     build:
       context: ./
       dockerfile: ./niffler-e-2-e-tests/Dockerfile
+      tags:
+        - ${PREFIX}/niffler-e-2-e-tests:latest
       args:
         DOCKER: eclipse-temurin:21-jdk
         ALLURE_DOCKER_API: ${ALLURE_DOCKER_API}
@@ -158,6 +168,7 @@ services:
     environment:
       - ALLURE_DOCKER_API=${ALLURE_DOCKER_API}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
+    image: ${PREFIX}/niffler-e-2-e-tests:latest
     depends_on:
       frontend.niffler.dc:
         condition: service_started
@@ -173,7 +184,7 @@ services:
       CHECK_RESULTS_EVERY_SECONDS: 3
       KEEP_HISTORY: 1
     ports:
-      - "5050:5050"
+      - 5050:5050
     networks:
       - test-network
 
@@ -185,7 +196,7 @@ services:
     environment:
       ALLURE_DOCKER_PUBLIC_API_URL: "http://localhost:5050"
     ports:
-      - "5252:5252"
+      - 5252:5252
     networks:
       - test-network
 
