--- a/niffler-ng-client/package.json
+++ b/niffler-ng-client/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.5",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.15.5",
     "@mui/x-date-pickers": "^7.11.0",
     "buffer": "^6.0.3",
