--- a/niffler-ng-client/package.json
+++ b/niffler-ng-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rangiffler-gql-client",
+  "name": "niffler-ng-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
