--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -163,9 +163,15 @@ services:
         DOCKER: eclipse-temurin:21-jdk
         ALLURE_DOCKER_API: ${ALLURE_DOCKER_API}
         GITHUB_TOKEN: ${GITHUB_TOKEN}
+        BUILD_URL: ${BUILD_URL}
+        HEAD_COMMIT_MESSAGE: ${HEAD_COMMIT_MESSAGE}
+        EXECUTION_TYPE: ${EXECUTION_TYPE}
     environment:
       - ALLURE_DOCKER_API=${ALLURE_DOCKER_API}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - BUILD_URL=${BUILD_URL}
+      - HEAD_COMMIT_MESSAGE=${HEAD_COMMIT_MESSAGE}
+      - EXECUTION_TYPE=${EXECUTION_TYPE}
     depends_on:
       frontend.niffler.dc:
         condition: service_started
@@ -178,7 +184,7 @@ services:
     depends_on:
       - niffler-e-2-e
     environment:
-      CHECK_RESULTS_EVERY_SECONDS: 3
+      CHECK_RESULTS_EVERY_SECONDS: NONE
       KEEP_HISTORY: 1
     ports:
       - 5050:5050
