--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,6 +128,7 @@ services:
         - ${PREFIX}/${FRONT}-docker:latest
       args:
         NPM_COMMAND: docker:build
+        VERSION: ${FRONT_VERSION}
     ports:
       - 80:80
     depends_on:
