--- a/niffler-spend/build.gradle
+++ b/niffler-spend/build.gradle
@@ -34,6 +34,10 @@ jib {
         jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
         environment = ['VAULT_TOKEN': "${System.env.VAULT_TOKEN}".toString()]
         creationTime = 'USE_CURRENT_TIMESTAMP'
+        labels = [
+                'maintainer': 'Dmitrii Tuchs @dtuchs',
+                'version': "${project.version}".toString()
+        ]
     }
     from {
         image = "${project.ext.dockerImage}"
