--- a/niffler-userdata/build.gradle
+++ b/niffler-userdata/build.gradle
@@ -57,6 +57,10 @@ jib {
         jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
         environment = ['VAULT_TOKEN': "${System.env.VAULT_TOKEN}".toString()]
         creationTime = 'USE_CURRENT_TIMESTAMP'
+        labels = [
+                'maintainer': 'Dmitrii Tuchs @dtuchs',
+                'version': "${project.version}".toString()
+        ]
     }
     from {
         image = "${project.ext.dockerImage}"
@@ -89,4 +93,3 @@ tasks.register('printVersion') {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
