--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -117,7 +117,7 @@ services:
       tags:
         - ${PREFIX}/${FRONT}-docker:latest
       args:
-        NPM_COMMAND: docker:build
+        NPM_COMMAND: build:docker
         VERSION: ${FRONT_VERSION}
     expose:
       - 80
