--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,7 @@ services:
       tags:
         - ${PREFIX}/${FRONT}-docker:latest
       args:
-        NPM_COMMAND: docker:build
+        NPM_COMMAND: build:docker
         VERSION: ${FRONT_VERSION}
     ports:
       - 80:80
