Apollo client for GraphQL tests; use profiles in docker-compose.yml

--- a/niffler-e-2-e-tests/Dockerfile
+++ b/niffler-e-2-e-tests/Dockerfile
@@ -1,17 +1,4 @@
-ARG DOCKER
-ARG ALLURE_DOCKER_API
-ARG GITHUB_TOKEN
-ARG BUILD_URL
-ARG HEAD_COMMIT_MESSAGE
-ARG EXECUTION_TYPE
-
-FROM ${DOCKER}
-
-ENV ALLURE_DOCKER_API=${ALLURE_DOCKER_API}
-ENV GITHUB_TOKEN=${GITHUB_TOKEN}
-ENV BUILD_URL=${BUILD_URL}
-ENV HEAD_COMMIT_MESSAGE=${HEAD_COMMIT_MESSAGE}
-ENV EXECUTION_TYPE=${EXECUTION_TYPE}
+FROM eclipse-temurin:21-jdk
 
 WORKDIR /niffler
 COPY ./gradle ./gradle
