--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,11 +122,10 @@ services:
 
   frontend.niffler.dc:
     container_name: frontend.niffler.dc
+    image: ${PREFIX}/${FRONT}-docker:latest
     build:
       context: ./${FRONT}
       dockerfile: ./Dockerfile
-      tags:
-        - ${PREFIX}/${FRONT}-docker:latest
       args:
         NPM_COMMAND: build:docker
         VERSION: ${FRONT_VERSION}
@@ -135,6 +134,82 @@ services:
     depends_on:
       gateway.niffler.dc:
         condition: service_started
+    networks:
+      - niffler-network
+        
+  selenoid:
+    profiles:
+      - test
+    container_name: selenoid
+    image: aerokube/selenoid:1.11.3
+    platform: linux/${ARCH}
+    volumes:
+      - ./selenoid:/etc/selenoid
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "3", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_niffler-network" ]
+    ports:
+      - 4444:4444
+    networks:
+      - niffler-network
+
+  selenoid-ui:
+    profiles:
+      - test
+    container_name: selenoid-ui
+    image: aerokube/selenoid-ui:1.10.11
+    depends_on:
+      - selenoid
+    restart: unless-stopped
+    ports:
+      - 9091:8080
+    command: [ "--selenoid-uri", "http://selenoid:4444" ]
+    networks:
+      - niffler-network
+
+  niffler-e-2-e:
+    profiles: [test]
+    container_name: niffler-e-2-e
+    image: ${PREFIX}/niffler-e-2-e-tests:latest
+    build:
+      context: ./
+      dockerfile: ./niffler-e-2-e-tests/Dockerfile
+    environment:
+      - ALLURE_DOCKER_API=${ALLURE_DOCKER_API}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - BUILD_URL=${BUILD_URL}
+      - HEAD_COMMIT_MESSAGE=${HEAD_COMMIT_MESSAGE}
+      - EXECUTION_TYPE=${EXECUTION_TYPE}
+    depends_on:
+      frontend.niffler.dc:
+        condition: service_started
+    networks:
+      - niffler-network
+
+  allure:
+    profiles: [test]
+    container_name: allure
+    image: frankescobar/allure-docker-service:2.27.0
+    depends_on:
+      - niffler-e-2-e
+    environment:
+      - CHECK_RESULTS_EVERY_SECONDS=NONE
+      - KEEP_HISTORY=1
+    ports:
+      - 5050:5050
+    networks:
+      - niffler-network
+
+  allure-ui:
+    profiles: [test]
+    container_name: allure-ui
+    image: frankescobar/allure-docker-service-ui:7.0.3
+    depends_on:
+      - allure
+    environment:
+      - ALLURE_DOCKER_PUBLIC_API_URL=http://localhost:5050
+    ports:
+      - 5252:5252
     networks:
       - niffler-network
 
