--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - CREATE_DATABASES=niffler-auth,niffler-currency,niffler-spend,niffler-userdata
       - PGUSER=postgres
       - POSTGRES_PASSWORD=secret
+      - TZ=GMT+3
+      - PGTZ=GMT+3
     volumes:
       - ./postgres/script:/docker-entrypoint-initdb.d
       - ./postgres/conf/postgresql.conf:/etc/postgresql.conf
@@ -146,6 +148,8 @@ services:
     volumes:
       - ./selenoid:/etc/selenoid
       - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - TZ=Europe/Moscow
     restart: unless-stopped
     command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "3", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_niffler-network" ]
     ports:
