--- a/.github/workflows/niffler-ng-client-prod.yaml
+++ b/.github/workflows/niffler-ng-client-prod.yaml
@@ -28,7 +28,6 @@ jobs:
           echo "SPEND_VER=${{ needs.collect-versions.outputs.spend-ver }}" >> $GITHUB_ENV
           echo "USERDATA_VER=${{ needs.collect-versions.outputs.userdata-ver }}" >> $GITHUB_ENV
           echo "FRONT_VER=${{ needs.collect-versions.outputs.front-ver }}" >> $GITHUB_ENV
-          echo "FRONT_IMAGE=niffler-ng-client" >> $GITHUB_ENV
       - name: Docker login
         run: |
           docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
@@ -36,7 +35,7 @@ jobs:
         working-directory: ./niffler-ng-client
         run: |
           pwd
-          IMAGE_TAG="${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}"
+          IMAGE_TAG="${{ env.PREFIX }}/niffler-ng-client-${{ env.PROFILE }}"
           echo "### niffler-front version will be used: ${IMAGE_TAG}:${{ env.FRONT_VER }} ###"
           docker build --build-arg NPM_COMMAND=build:prod --build-arg VERSION=${{ env.FRONT_VER }} -t ${IMAGE_TAG}:${{ env.FRONT_VER }} -t ${IMAGE_TAG}:latest .
           docker push ${IMAGE_TAG}:${{ env.FRONT_VER }}
