--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 plugins {
     id 'java'
     id 'com.github.ben-manes.versions' version '0.51.0'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'guru.qa'
 
 allprojects {
     apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
 
     repositories {
         mavenCentral()
@@ -24,13 +26,13 @@ subprojects {
         dockerHubName = "qaguru"
 
         lombokVersion = '1.18.34'
-        springKafkaVersion = '3.2.2'
+        springKafkaVersion = '3.3.2'
+        springVaultVersion = '4.2.0'
+        springOpenApiVersion = '2.8.3'
         postgresDriverVersion = '42.7.3'
         flywayVersion = '10.17.1'
-        springVaultVersion = '4.1.3'
         springGrpcVersion = '3.1.0.RELEASE'
         springGraphqlDateTimeVersion = '6.0.0'
-        openApiVersion = '2.6.0'
         jakartaJaxbVersion = '4.0.5'
         wsdl4jVersion = '1.6.3'
         protobufVersion = '3.25.3'
