--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - PGTZ=GMT+3
     volumes:
       - ./postgres/script:/docker-entrypoint-initdb.d
-      - ./postgres/conf/postgresql.conf:/etc/postgresql.conf
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "postgres", "-d", "postgres" ]
       interval: 3s
@@ -18,6 +17,7 @@ services:
       retries: 5
     ports:
       - 5432:5432
+    command: [ "postgres", "-c", "max_prepared_transactions=100" ]
     networks:
       - niffler-network
 
@@ -124,13 +124,12 @@ services:
 
   frontend.niffler.dc:
     container_name: frontend.niffler.dc
-    image: ${PREFIX}/${FRONT}-docker:latest
+    image: ${PREFIX}/niffler-ng-client-docker:latest
     build:
-      context: ./${FRONT}
+      context: ./niffler-ng-client
       dockerfile: ./Dockerfile
       args:
         NPM_COMMAND: build:docker
-        VERSION: ${FRONT_VERSION}
     ports:
       - 80:80
     depends_on:
