--- a/niffler-gateway/build.gradle
+++ b/niffler-gateway/build.gradle
@@ -1,12 +1,11 @@
 plugins {
-    id 'org.springframework.boot' version '3.3.2'
-    id 'io.spring.dependency-management' version '1.1.6'
+    id 'org.springframework.boot' version '3.4.2'
     id 'com.google.cloud.tools.jib' version '3.4.1'
     id 'com.github.edeandrea.xjc-generation' version '1.6'
 }
 
 group = 'guru.qa'
-version = '2.1.1'
+version = '2.1.2'
 
 dependencies {
     implementation project(':niffler-grpc-common')
@@ -25,7 +24,7 @@ dependencies {
     implementation "com.tailrocks.graphql:graphql-datetime-spring-boot-starter:${project.ext.springGraphqlDateTimeVersion}"
     implementation "net.devh:grpc-client-spring-boot-starter:${project.ext.springGrpcVersion}"
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
-    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${project.ext.openApiVersion}"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${project.ext.springOpenApiVersion}"
 
     xjc "org.glassfish.jaxb:jaxb-xjc:${project.ext.jakartaJaxbVersion}"
 
