added Registered client for mobile apps

--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -69,7 +69,9 @@ niffler-front:
 niffler-auth:
   base-uri: 'http://127.0.0.1:9000'
 oauth2:
-  client-id: 'client'
+  web-client-id: 'client'
+  mobile-client-id: 'mobile-client'
+  mobile-custom-scheme: 'niffler:'
 ---
 spring:
   config:
@@ -91,7 +93,9 @@ niffler-front:
 niffler-auth:
   base-uri: 'http://auth.niffler.dc:9000'
 oauth2:
-  client-id: 'client'
+  web-client-id: 'client'
+  mobile-client-id: 'mobile-client'
+  mobile-custom-scheme: 'niffler:'
 ---
 spring:
   config:
@@ -118,6 +122,8 @@ niffler-auth:
   base-uri: 'https://auth.niffler.qa.guru'
 oauth2:
   client-id: ${client-id}
+  mobile-client-id: ${mobile-client-id}
+  mobile-custom-scheme: ${mobile-custom-scheme}
 ---
 spring:
   config:
@@ -144,4 +150,6 @@ niffler-auth:
   base-uri: 'https://auth.niffler-stage.qa.guru'
 oauth2:
   client-id: ${client-id}
+  mobile-client-id: ${mobile-client-id}
+  mobile-custom-scheme: ${mobile-custom-scheme}
 ---
