fix custom scheme & mobile redirect uri

--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -71,7 +71,7 @@ niffler-auth:
 oauth2:
   web-client-id: 'client'
   mobile-client-id: 'mobile-client'
-  mobile-custom-scheme: 'niffler:'
+  mobile-custom-scheme: 'app://'
 ---
 spring:
   config:
@@ -95,7 +95,7 @@ niffler-auth:
 oauth2:
   web-client-id: 'client'
   mobile-client-id: 'mobile-client'
-  mobile-custom-scheme: 'niffler:'
+  mobile-custom-scheme: 'app://'
 ---
 spring:
   config:
