Implement persistent sessions

--- a/niffler-auth/build.gradle
+++ b/niffler-auth/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '2.3.0'
+version = '2.4.0'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -14,6 +14,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.session:spring-session-jdbc'
     implementation "org.springframework.kafka:spring-kafka:${project.ext.springKafkaVersion}"
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
