manually set heap size

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -5,6 +5,7 @@ services:
     pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
+      - JAVA_TOOL_OPTIONS="-Xms512M -Xmx512M"
     ports:
       - 9000:9000
     healthcheck:
@@ -22,6 +23,7 @@ services:
     pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
+      - JAVA_TOOL_OPTIONS="-Xms384M -Xmx384M"
     ports:
       - 8091:8091
       - 8092:8092
@@ -35,6 +37,7 @@ services:
     pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
+      - JAVA_TOOL_OPTIONS="-Xms512M -Xmx512M"
     ports:
       - 8090:8090
     healthcheck:
@@ -55,6 +58,7 @@ services:
     pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
+      - JAVA_TOOL_OPTIONS="-Xms512M -Xmx512M"
     ports:
       - 8093:8093
     restart: always
@@ -67,6 +71,7 @@ services:
     pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
+      - JAVA_TOOL_OPTIONS="-Xms512M -Xmx512M"
     ports:
       - 8089:8089
     restart: always
