--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
     image: ${PREFIX}/niffler-auth-docker:latest
     ports:
       - 9000:9000
+    environment:
+      - JAVA_TOOL_OPTIONS="-Xms384M -Xmx384M"
     healthcheck:
       test: "wget --spider http://localhost:9000/actuator/health || exit 1"
       interval: 5s
@@ -74,6 +76,8 @@ services:
     ports:
       - 8091:8091
       - 8092:8092
+    environment:
+      - JAVA_TOOL_OPTIONS="-Xms256M -Xmx256M"
     restart: always
     depends_on:
       niffler-all-db:
@@ -86,6 +90,8 @@ services:
     image: ${PREFIX}/niffler-gateway-docker:latest
     ports:
       - 8090:8090
+    environment:
+      - JAVA_TOOL_OPTIONS="-Xms384M -Xmx384M"
     healthcheck:
       test: "wget --spider http://localhost:8090/actuator/health || exit 1"
       interval: 5s
@@ -103,6 +109,8 @@ services:
     image: ${PREFIX}/niffler-spend-docker:latest
     ports:
       - 8093:8093
+    environment:
+      - JAVA_TOOL_OPTIONS="-Xms384M -Xmx384M"
     restart: always
     depends_on:
       niffler-all-db:
@@ -115,6 +123,8 @@ services:
     image: ${PREFIX}/niffler-userdata-docker:latest
     ports:
       - 8089:8089
+    environment:
+      - JAVA_TOOL_OPTIONS="-Xms384M -Xmx384M"
     restart: always
     depends_on:
       auth.niffler.dc:
